--- a/Venturada.UI/Views/Gallery/Edit.cshtml
+++ b/Venturada.UI/Views/Gallery/Edit.cshtml
@@ -8,13 +8,13 @@
         <div class="col-lg-12">
             <h1 class="page-header">
                 Gallery
-                <small>See our gallery!</small>
+                <small>Edit your gallery!</small>
             </h1>
             <ol class="breadcrumb">
                 <li>
                     @Html.ActionLink("Home", "Index", "Home")
                 </li>
-                <li>Gallery</li>
+                <li>Edit Gallery</li>
             </ol>
         </div>
     </div>
