--- a/Venturada.UI/Views/Home/EditImage.cshtml
+++ b/Venturada.UI/Views/Home/EditImage.cshtml
@@ -35,7 +35,7 @@
                         <div class="form-group col-lg-12">
                             <input type="hidden" value="@Model.CarouselId" name="edit_CarouselId">
                             <input type="hidden" value="@Model.CarouselImageString" name="edit_CarouselImageString">
-                            <button class="btn btn-primary" type="submit">Save</button>
+                            <button class="btn btn-primary" type="submit">Save Image</button>
                         </div>
                     }
                 }
