--- a/Venturada.UI/Views/Shared/_LoginPartial.cshtml
+++ b/Venturada.UI/Views/Shared/_LoginPartial.cshtml
@@ -31,6 +31,9 @@
                 case "Gallery":
                 <li>@Html.ActionLink("Edit " + webPage, "Edit", "Gallery")</li>
                     break;
+                case "Contact":
+                <li>@Html.ActionLink("Edit " + webPage, "Edit", "Contact")</li>
+                    break;
             }
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
