--- a/Venturada.UI/Views/Price/EditCategory.cshtml
+++ b/Venturada.UI/Views/Price/EditCategory.cshtml
@@ -7,10 +7,10 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Add Product Category</h1>
+            <h1 class="page-header">Edit Product Category</h1>
             <ol class="breadcrumb">
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>Add Category</li>
+                <li>Edit Category</li>
             </ol>
         </div>
     </div><!-- /.row -->
