--- a/Venturada.UI/Views/Price/_EditProductCategoryPartial.cshtml
+++ b/Venturada.UI/Views/Price/_EditProductCategoryPartial.cshtml
@@ -1,5 +1,9 @@
 ﻿@model List<Venturada.UI.Models.ProductCategoryModel>
 
+@{
+    ViewBag.Title = "Price List";
+}
+
 <div class="container">
 
     <div class="row">
@@ -17,8 +21,8 @@
                     {
                         <div class="form-group col-lg-12 ">
                             <h2 class="page-header">@item.ProductCategory</h2> 
-                            <i class="fa fa-save"></i><abbr title="Edit">E</abbr>@Html.ActionLink("dit Category", "EditCategory", "Price", new { productCategoryId = @item.ProductCategoryId }, null)  
-                            <i class="fa fa-bullseye"></i><abbr title="Delete">D</abbr>@Html.ActionLink("elete Category", "DeleteCategory", "Price", new { productCategoryId = @item.ProductCategoryId }, null)
+                            @Html.ActionLink("Edit Category", "EditCategory", "Price", new { productCategoryId = @item.ProductCategoryId }, null)  
+                            | @Html.ActionLink("Delete Category", "DeleteCategory", "Price", new { productCategoryId = @item.ProductCategoryId }, null)
                             <input type="hidden" name="productCategoryId" value="@item.ProductCategoryId" />
                         </div>
 
@@ -38,7 +42,7 @@
                     <tr>
                         <td>
                             <i class="fa fa-plus"></i>
-                            <abbr title="Add">A</abbr>@Html.ActionLink("dd Products", "AddPrice", "Price", new { productCategoryId = @item.ProductCategoryId }, null)
+                            @Html.ActionLink("Add Products", "AddPrice", "Price", new { productCategoryId = @item.ProductCategoryId }, null)
                         </td>
                     </tr>
                     foreach (var item3 in item.PriceListModel)
@@ -54,8 +58,8 @@
                                     @item3.Price
                                 </td>
                             <td>
-                                <abbr title="Edit">E</abbr>@Html.ActionLink("dit Product", "EditPrice", "Price", new { priceListId = @item3.PriceListId }, null)
-                                | <abbr title="Delete">D</abbr>@Html.ActionLink("elete Product", "DeletePrice", "Price", new { priceListId = @item3.PriceListId }, null)
+                                @Html.ActionLink("Edit Product", "EditPrice", "Price", new { priceListId = @item3.PriceListId }, null)
+                                | @Html.ActionLink("Delete Product", "DeletePrice", "Price", new { priceListId = @item3.PriceListId }, null)
                             </td>
                         </tr>
                     }
@@ -66,7 +70,7 @@
                     <tr>
                         <td>
                             <i class="fa fa-plus"></i>
-                            <abbr title="Add">A</abbr>@Html.ActionLink("dd Products", "AddPrice", "Price", new { productCategoryId = @item.ProductCategoryId }, null)
+                            @Html.ActionLink("Add Products", "AddPrice", "Price", new { productCategoryId = @item.ProductCategoryId }, null)
                         </td>
                     </tr>
                 }
@@ -77,7 +81,7 @@
                 <tr>
                     <td>
                         <i class="fa fa-plus"></i>
-                        <abbr title="Add">A</abbr>@Html.ActionLink("dd Products", "AddPrice", "Price", new { productCategoryId = @item.ProductCategoryId }, null)
+                        @Html.ActionLink("Add Products", "AddPrice", "Price", new { productCategoryId = @item.ProductCategoryId }, null)
                     </td>
                 </tr>
             }
