--- a/Venturada.UI/Views/Gallery/EditGallery.cshtml
+++ b/Venturada.UI/Views/Gallery/EditGallery.cshtml
@@ -41,7 +41,7 @@
             </ol>
         </div>
     </div>
-    @if (Session.Count > 0)
+    @if (Session["UserName"]  != null)
     {
         <div class="row">
 
