--- a/Venturada.UI/Views/Gallery/Index.cshtml
+++ b/Venturada.UI/Views/Gallery/Index.cshtml
@@ -18,7 +18,36 @@
             </ol>
         </div>
     </div>
-    @if (Model.GalleryModelRow1.Count > 0)
+    @if (Model.GalleryModelRow1.Count > 0
+            || Model.GalleryModelRow2.Count > 0
+            || Model.GalleryModelRow3.Count > 0
+            || Model.GalleryModelRow4.Count > 0
+            || Model.GalleryModelRow5.Count > 0
+            || Model.GalleryModelRow6.Count > 0
+            || Model.GalleryModelRow7.Count > 0
+            || Model.GalleryModelRow8.Count > 0
+            || Model.GalleryModelRow9.Count > 0
+            || Model.GalleryModelRow10.Count > 0
+            || Model.GalleryModelRow11.Count > 0
+            || Model.GalleryModelRow12.Count > 0
+            || Model.GalleryModelRow13.Count > 0
+            || Model.GalleryModelRow14.Count > 0
+            || Model.GalleryModelRow15.Count > 0
+            || Model.GalleryModelRow16.Count > 0
+            || Model.GalleryModelRow17.Count > 0
+            || Model.GalleryModelRow18.Count > 0
+            || Model.GalleryModelRow19.Count > 0
+            || Model.GalleryModelRow20.Count > 0
+            || Model.GalleryModelRow21.Count > 0
+            || Model.GalleryModelRow22.Count > 0
+            || Model.GalleryModelRow23.Count > 0
+            || Model.GalleryModelRow24.Count > 0
+            || Model.GalleryModelRow25.Count > 0
+            || Model.GalleryModelRow26.Count > 0
+            || Model.GalleryModelRow27.Count > 0
+            || Model.GalleryModelRow28.Count > 0
+            || Model.GalleryModelRow29.Count > 0
+            || Model.GalleryModelRow30.Count > 0)
     {
          <!-- Row1 -->
         <div class="row">
