--- a/Venturada.UI/Views/About/Add.cshtml
+++ b/Venturada.UI/Views/About/Add.cshtml
@@ -16,7 +16,7 @@
             </ol>
         </div>
     </div>
-    @if (Session.Count > 0)
+    @if (Session["UserName"]  != null)
     {
         <div class="row">
             <div class="col-sm-12">
