--- a/Venturada.UI/Views/About/Edit.cshtml
+++ b/Venturada.UI/Views/About/Edit.cshtml
@@ -20,7 +20,7 @@
         </div>
     </div>
 </div>
-    @if (Session.Count > 0)
+    @if (Session["UserName"]  != null)
     {
         @Html.Partial("_EditAboutUsPartial", Model.AboutUsModel)
 
