--- a/Venturada.UI/Views/About/_EditAboutUsPartial.cshtml
+++ b/Venturada.UI/Views/About/_EditAboutUsPartial.cshtml
@@ -50,7 +50,7 @@
         });
     </script>
 </head>
-@if (Session.Count > 0)
+@if (Session["UserName"]  != null)
 {
     if (Model.AboutUsId > 0)
     {
