--- a/Venturada.UI/Views/Contact/Index.cshtml
+++ b/Venturada.UI/Views/Contact/Index.cshtml
@@ -49,7 +49,7 @@
                     </div>
                     <div class="form-group col-lg-12">
                         <input type="hidden" value="contact" name="save">
-                        <button class="btn btn-primary" type="submit">Submit</button>
+                        <button class="btn btn-primary" type="submit">Send</button>
                     </div>
                     <div class="form-group col-lg-6">
                         <p style="color:red">* Required Fields</p>
@@ -131,10 +131,29 @@
             }
             
             
+            @if (Model.EmailAddressModel.EmailAddressId != null)
+            {
+                <p><i class="fa fa-envelope-o"></i> <abbr title="Email">E</abbr>: <a href="mailto:@Model.EmailAddressModel.EmailAddress">@Model.EmailAddressModel.EmailAddress</a></p>
+            }
+            else
+            {
+                <p><i class="fa fa-envelope-o"></i> <abbr title="Email">E</abbr>: <a href="mailto:customerservice@venturadahogs.com">customerservice@venturadahogs.com</a></p>
+            }
             
-            <p><i class="fa fa-envelope-o"></i> <abbr title="Email">E</abbr>: <a href="mailto:customerservice@venturadahogs.com">customerservice@venturadahogs.com</a></p>
-            <p><i class="fa fa-clock-o"></i> <abbr title="Hours">H</abbr>: Mon-Fri: 6am to 7pm</p>
-            <ul class="list-unstyled list-inline list-social-icons">
+            @if (Model.ShoppingHoursModel.ShoppingHoursId != null)
+            {
+                <p><i class="fa fa-clock-o"></i> <abbr title="Hours">H</abbr>: @Model.ShoppingHoursModel.ShoppingHours</p>
+            }
+            else
+            {
+                <p><i class="fa fa-clock-o"></i> <abbr title="Hours">H</abbr>: Mon-Fri: 6am to 7pm</p>
+            }
+            @if (Model.ContactAdditionalModel.ContactAdditionalId != null)
+            {
+                <p>@(new HtmlString(Model.ContactAdditionalModel.ContactDescription))</p>
+            }
+
+            @*<ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link">
                     <a title="Facebook" data-placement="top" data-toggle="tooltip" href="https://www.facebook.com/profile.php?id=100010526250517"><i class="fa fa-facebook-square fa-2x"></i></a>
                 </li>
@@ -152,7 +171,7 @@
                     </a>
                 </li>
                 
-            </ul>
+            </ul>*@
         </div>
         
     </div><!-- /.row -->
