--- a/Venturada.UI/Views/Gallery/Add.cshtml
+++ b/Venturada.UI/Views/Gallery/Add.cshtml
@@ -42,7 +42,7 @@
             </ol>
         </div>
     </div>
-    @if (Session.Count > 0)
+    @if (Session["UserName"]  != null)
     {
         <div class="row">
 
