--- a/Venturada.UI/Views/Home/Add.cshtml
+++ b/Venturada.UI/Views/Home/Add.cshtml
@@ -17,9 +17,9 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="row">
-                @if (Session.Count > 0)
+                @if (Session["UserName"]  != null)
                 {
-                    @using (Html.BeginForm("AddImages", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                    using (Html.BeginForm("AddImages", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
                     {
                         <div class="form-group col-sm-12">
                             <input type="file" name="home_image" class="form-control" accept="image/png,image/jpg,image/jpeg" />
