--- a/Venturada.UI/Views/Home/Edit.cshtml
+++ b/Venturada.UI/Views/Home/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@if (Session.Count > 0)
+@if (Session["UserName"]  != null)
 {
     <div class="container">
         <div class="row">
