--- a/Venturada.UI/Views/Home/EditImage.cshtml
+++ b/Venturada.UI/Views/Home/EditImage.cshtml
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="row">
-                @if (Session.Count > 0)
+                @if (Session["UserName"]  != null)
                 {
                     using (Html.BeginForm("EditImage", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
                     {
