--- a/Venturada.UI/Views/Home/_EditMainPartial.cshtml
+++ b/Venturada.UI/Views/Home/_EditMainPartial.cshtml
@@ -55,7 +55,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="row">
-                    @if (Session.Count > 0)
+                    @if (Session["UserName"]  != null)
                     {
                          using (Html.BeginForm("EditMain", "Home", FormMethod.Post, new { @class = "form-horizontal" }))
                          {
