--- a/Venturada.UI/Views/Home/_FeatureMainPartial.cshtml
+++ b/Venturada.UI/Views/Home/_FeatureMainPartial.cshtml
@@ -2,75 +2,68 @@
 
 @if (Model.Count > 0)
 {
-
     <div class="section-colored">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
-                    <img src=@Model[0].FeatureImageURLString class="img-responsive img-customer">
-                    <h3>
-                        About Us
-                    </h3>
-                    <p>
-                        @(new HtmlString(Model[0].FeatureDescription))
-                    </p>
-                    <br/>
-                        <a class="btn btn-sm btn-primary pull-right" href="@Url.Action("Index", "About")">
-                            Find out more!
-                        </a>
+                <div class="row-height">
+                    <div class="col-xs-4 col-sm-4 col-sm-height col-sm-top">
+                        <div class="inside inside-full-height">
+                            <div class="content">
+                                <img src=@Model[0].FeatureImageURLString class="img-responsive img-customer">
+                                <h3>
+                                    About Us
+                                </h3>
+                                <p>
+                                    @(new HtmlString(Model[0].FeatureDescription))
+                                </p>
+                                <br />
+                                <a class="btn btn-sm btn-primary pull-right btn-bot" href="@Url.Action("Index", "About")">
+                                    Find out more!
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-sm-height col-sm-top">
+                        <div class="inside inside-full-height">
+                            <div class="content">
+                                <img src=@Model[1].FeatureImageURLString class="img-responsive img-customer">
+                                <h3>
+                                    Products
+                                </h3>
+                                <p>
+                                    @(new HtmlString(Model[1].FeatureDescription))
+                                </p>
+                                <br />
+                                <a class="btn btn-sm btn-primary pull-right btn-bot" href="@Url.Action("Index", "Products")">
+                                    Find out more!
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-sm-height col-sm-top">
+                        <div class="inside inside-full-height">
+                            <div class="content">
+                                <img src=@Model[2].FeatureImageURLString class="img-responsive img-customer">
+                                <h3>
+                                    Services
+                                </h3>
+                                <p>
+                                    @(new HtmlString(Model[2].FeatureDescription))
+                                </p>
+                                <br />
+                                <a class="btn btn-sm btn-primary pull-right btn-bot " href="@Url.Action("Index", "Services")">
+                                    Find out more!
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    @*<div class="col-xs-6 col-sm-1 col-sm-height col-sm-bottom">
+                        <div class="inside inside-full-height">
+                            <div class="content"></div>
+                        </div>
+                    </div>*@
                 </div>
-
-                <div class="col-lg-4">
-                    <img src=@Model[1].FeatureImageURLString class="img-responsive img-customer">
-                    <h3>
-                        Products
-                    </h3>
-                    <p>
-                        @(new HtmlString(Model[1].FeatureDescription))
-                    </p>
-                    <br/>
-                        <a class="btn btn-sm btn-primary pull-right " href="@Url.Action("Index", "Products")">
-                            Find out more!
-                        </a>
-                </div>
-                <div class="col-lg-4">
-                    <img src=@Model[2].FeatureImageURLString class="img-responsive img-customer">
-                    <h3>
-                        Services
-                    </h3>
-                    <p>
-                        @(new HtmlString(Model[2].FeatureDescription))
-                    </p>
-                    <br/>
-                        <a class="btn btn-sm btn-primary pull-right " href="@Url.Action("Index", "Services")">
-                            Find out more!
-                        </a>
-                </div>
-
             </div>
-            @*<div class="row">
-                <div class="col-sm-4">
-                    <div class="buttonLink">
-                        <a class="btn btn-sm btn-primary pull-right" href="@Url.Action("Index", "About")">
-                            Find out more!
-                        </a>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="buttonLink">
-                        <a class="btn btn-sm btn-primary pull-right " href="@Url.Action("Index", "Products")">
-                            Find out more!
-                        </a>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="buttonLink">
-                        <a class="btn btn-sm btn-primary pull-right " href="@Url.Action("Index", "Services")">
-                            Find out more!
-                        </a>
-                    </div>
-                </div>
-            </div>*@
         </div>
 
     </div>
