--- a/Venturada.UI/Views/Products/Edit.cshtml
+++ b/Venturada.UI/Views/Products/Edit.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@if (Session.Count > 0)
+@if (Session["UserName"]  != null)
 {
     <div class="container">
         <div class="row">
