--- a/Venturada.UI/Views/Products/_EditProductsListPartial.cshtml
+++ b/Venturada.UI/Views/Products/_EditProductsListPartial.cshtml
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                @if (Session.Count > 0)
+                @if (Session["UserName"]  != null)
                 {
                     if (Model.Count > 0)
                     {
