--- a/Venturada.UI/Views/Promo/Edit.cshtml
+++ b/Venturada.UI/Views/Promo/Edit.cshtml
@@ -68,7 +68,7 @@
     </div>
 </div>
 
-@if (Session.Count > 0)
+@if (Session["UserName"]  != null)
 {
     <div class="section">
         <div class="container">
