--- a/Venturada.UI/Views/Services/Edit.cshtml
+++ b/Venturada.UI/Views/Services/Edit.cshtml
@@ -21,7 +21,7 @@
         </div>
     </div>
 </div>
-@if (Session.Count > 0)
+@if (Session["UserName"]  != null)
 {
     <div class="container">
         <div class="section">
