--- a/Venturada.UI/Views/Services/EditService.cshtml
+++ b/Venturada.UI/Views/Services/EditService.cshtml
@@ -67,46 +67,54 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="row">
-                
-                @using (Html.BeginForm("EditService", "Services", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                @if (Session["UserName"]  != null)
                 {
-                    <div class="form-group col-lg-12">
-                        @Html.LabelFor(model => model.ImageString, new { @class = "required" })
-                        <p class="thumbnail">
-                            Current image. : <img src=@Url.Action("GetPhotoThumbnail", new { imageString = Model.ImageString }) class="img-responsive img-thumbnail">
-                        </p>
-                    </div>
-                    <div class="form-group col-sm-12">
-                        <input type="file" name="services_image" class="form-control" accept="image/png,image/jpg,image/jpeg" value="@Model.ImageString" />
-                    </div>
-                    @Html.AntiForgeryToken()
-                    <div class="form-group col-lg-12">
-                        @Html.LabelFor(model => model.ServiceName, new { @class = "required" })
-                        <div class="controls">
-                            @Html.TextBoxFor(model => model.ServiceName, new { maxlength = 100, @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.ServiceName, null, new { @class = "help-inline", style = "color: red" })
+                    
+                    using (Html.BeginForm("EditService", "Services", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                    {
+                        <div class="form-group col-lg-12">
+                            @Html.LabelFor(model => model.ImageString, new { @class = "required" })
+                            <p class="thumbnail">
+                                Current image. : <img src=@Url.Action("GetPhotoThumbnail", new { imageString = Model.ImageString }) class="img-responsive img-thumbnail">
+                            </p>
                         </div>
-                    </div>
-                    <div class="form-group col-lg-12">
-                        @Html.LabelFor(model => model.ServiceSubTitle, new { @class = "required" })
-                        <div class="controls">
-                            @Html.TextBoxFor(model => model.ServiceSubTitle, new { maxlength = 100, @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.ServiceSubTitle, null, new { @class = "help-inline", style = "color: red" })
+                        <div class="form-group col-sm-12">
+                            <input type="file" name="services_image" class="form-control" accept="image/png,image/jpg,image/jpeg" value="@Model.ImageString" />
                         </div>
-                    </div>
-                    <div class="form-group col-lg-12">
-                        @Html.LabelFor(model => model.ServiceDescription, new { @class = "required" })
-                        <div class="controls">
-                            @Html.TextAreaFor(model => model.ServiceDescription, new { maxlength = 1000, @rows = 10, @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.ServiceDescription, null, new { @class = "help-inline", style = "color: red" })
+                        @Html.AntiForgeryToken()
+                        <div class="form-group col-lg-12">
+                            @Html.LabelFor(model => model.ServiceName, new { @class = "required" })
+                            <div class="controls">
+                                @Html.TextBoxFor(model => model.ServiceName, new { maxlength = 100, @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.ServiceName, null, new { @class = "help-inline", style = "color: red" })
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group col-lg-12">
-                        <input type="hidden" value="@Model.ServicesId" name="edit_ServicesId">
-                        <input type="hidden" value="@Model.ImageString" name="edit_ImageString">
-                        <input type="hidden" value="@Model.ServiceName" name="edit_ServiceName">
-                        <button class="btn btn-primary" type="submit">Save</button>
-                    </div>
+                        <div class="form-group col-lg-12">
+                            @Html.LabelFor(model => model.ServiceSubTitle, new { @class = "required" })
+                            <div class="controls">
+                                @Html.TextBoxFor(model => model.ServiceSubTitle, new { maxlength = 100, @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.ServiceSubTitle, null, new { @class = "help-inline", style = "color: red" })
+                            </div>
+                        </div>
+                        <div class="form-group col-lg-12">
+                            @Html.LabelFor(model => model.ServiceDescription, new { @class = "required" })
+                            <div class="controls">
+                                @Html.TextAreaFor(model => model.ServiceDescription, new { maxlength = 300, @rows = 5, @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.ServiceDescription, null, new { @class = "help-inline", style = "color: red" })
+                            </div>
+                        </div>
+                        <div class="form-group col-lg-12">
+                            <input type="hidden" value="@Model.ServicesId" name="edit_ServicesId">
+                            <input type="hidden" value="@Model.ImageString" name="edit_ImageString">
+                            <input type="hidden" value="@Model.ServiceName" name="edit_ServiceName">
+                            <button class="btn btn-primary" type="submit">Save</button>
+                        </div>
+                    }
+
+                }
+                else
+                {
+                    @Html.Partial("_NoAccess")
                 }
             </div>
         </div>
