--- a/Venturada.UI/Views/Services/Index.cshtml
+++ b/Venturada.UI/Views/Services/Index.cshtml
@@ -20,60 +20,56 @@
     </div>
 
     <!-- Service Paragraphs -->
-    <div class="row">
+    <div class="row-height">
         @foreach (var item in Model.ServicesModelRow1)
         {
-            <div class="col-md-4  portfolio-item">
-                <img src="@item.ImageString" class="img-responsive" alt="">
-                <h3>
-                    @item.ServiceName<small> @item.ServiceSubTitle</small>
-                </h3>
-                <p>@(new HtmlString(item.ServiceDescription))</p>
+            <div class="col-xs-4 col-sm-4 col-sm-height col-sm-top">
+                <div class="inside inside-full-height">
+                    <div class="content">
 
+                        @*<div class="col-md-4  portfolio-item">*@
+                        <img src="@item.ImageString" class="img-responsive  img-customer" alt="">
+                        <h3>
+                            @item.ServiceName<small> @item.ServiceSubTitle</small>
+                        </h3>
+                        <p>@(new HtmlString(item.ServiceDescription))</p>
+
+                        @*</div>*@
+
+
+                    </div>
+                </div>
             </div>
-
         }
-    </div>     
-    
-    <div class="row">
+    </div>
+
+    <div class="row-height">
         @foreach (var item in Model.ServicesModelRow2)
         {
-            <div class="col-md-4 portfolio-item">
-                <img src="@item.ImageString" class="img-responsive" alt="">
-                <h3>
-                    @item.ServiceName<small> @item.ServiceSubTitle</small>
-                </h3>
-                <p>@(new HtmlString(item.ServiceDescription))</p>
-                @if (item.ServicesId == 4)
-                {
-                    <a class="btn btn-sm btn-primary pull-right" href="@Url.Action("Index", "Price")">
-                        Click Here!
-                    </a>
-                }
-                @if (item.ServicesId == 5)
-                {
-                    <a class="btn btn-sm btn-primary pull-right" href="@Url.Action("Index", "Forms")">
-                        Click Here!
-                    </a>
-                }
-
-
+            <div class="col-xs-4 col-sm-4 col-sm-height col-sm-top">
+                <div class="inside inside-full-height">
+                    <div class="content">
+                        <img src="@item.ImageString" class="img-responsive" alt="">
+                        <h3>
+                            @item.ServiceName<small> @item.ServiceSubTitle</small>
+                        </h3>
+                        <p>@(new HtmlString(item.ServiceDescription))</p>
+                        <br />
+                        @if (item.ServicesId == 4)
+                        {
+                            <a class="btn btn-sm btn-primary pull-right btn-bot " href="@Url.Action("Index", "Price")">
+                                Click Here!
+                            </a>
+                        }
+                        @if (item.ServicesId == 5)
+                        {
+                            <a class="btn btn-sm btn-primary pull-right btn-bot " href="@Url.Action("Index", "Forms")">
+                                Click Here!
+                            </a>
+                        }
+                    </div>
+                </div>
             </div>
-
         }
-    </div> 
-    @*<div class="row">
-        <div class="col-sm-4">
-        </div>
-        <div class="col-sm-4">
-            <a class="btn btn-sm btn-primary pull-right" href="@Url.Action("Index", "Price")">
-                Click Here!
-            </a>
-        </div>
-        <div class="col-sm-4">
-            <a class="btn btn-sm btn-primary pull-right" href="@Url.Action("Index", "Forms")">
-                Click Here!
-            </a>
-        </div>
-    </div>*@
+    </div>
 </div>
